--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       <button class="click">Change color</button>
     </div>
     <script>
-      let color = ['yellow', 'green', 'blue'];
+      let color = ['yellow', 'green', 'blue', 'red', 'brown', 'magenta'];
       let i= 0; // contatore
 
       document.querySelector(".click").addEventListener("click", () => {
